# NewWave

./: README.md
tags/NewWave-1.0.0/: Makefile.am  configure.ac
tags/NewWave-1.0.0/doc/: Doxyfile
tags/NewWave-1.0.0/examples/: NewWave-Rivet.cc
tags/NewWave-1.0.0/include/NewWave/: GSLEngine.hh  MomentumHelpers.hh
tags/NewWave-1.0.0/src/: HepMC_disabled.cc  HepMC_enabled.cc
tags/NewWave-1.1.0/: ChangeLog  configure.ac
tags/NewWave-1.1.0/include/NewWave/: Exceptions.hh  Makefile.am  WaveletCoefficient.hh
tags/NewWave-1.1.0/src/: GSLEngine.cc  Makefile.am  WaveletCoefficient.cc
tags/NewWave-1.2.0/: ChangeLog  Makefile.am  configure.ac
tags/NewWave-1.2.0/include/: Makefile.am
tags/NewWave-1.2.0/include/NewWave/: Exceptions.hh  FrequencyBand.fh  GSLEngine.hh  PixelArray.hh  WaveletBaseEvent.hh  WaveletCoefficient.hh
tags/NewWave-1.2.0/src/: FrequencyBand.cc  HepMC_disabled.cc
tags/NewWave-1.2.2/: ChangeLog
tags/NewWave-1.2.2/include/NewWave/: MomentumHelpers.hh  PixelDefinition.hh  Utils.hh
tags/NewWave-1.2.2/src/: HepMC_enabled.cc  Makefile.am
tags/NewWave-1.3.0/: AUTHORS  ChangeLog  configure.ac
tags/NewWave-1.3.0/doc/: Makefile.am
tags/NewWave-1.3.0/include/NewWave/: PixelArray.hh  WaveletCoefficient.fh  WaveletEvent.hh
tags/NewWave-1.3.0/src/: GSLEngine.cc  PixelDefinition.cc  WaveletBaseEvent.cc  WaveletCoefficient.cc
trunk/: ChangeLog  README  configure.ac
trunk/doc/: Doxyfile
trunk/examples/: NewWave-HepMC.cc  NewWave-Rivet.cc
trunk/include/NewWave/: Exceptions.hh  FrequencyBand.hh  GSLEngine.hh  Makefile.am  Momentum.hh  MomentumHelpers.hh  NewWave.hh  PixelArray.hh  PixelDefinition.hh  RasterisedEvent.hh  Utils.hh  WaveletBaseEvent.hh  WaveletCoefficient.hh  WaveletEngine.hh  WaveletEvent.hh
trunk/src/: GSLEngine.cc  GSL_enabled.cc  HepMC_disabled.cc  HepMC_enabled.cc  Makefile.am  PixelDefinition.cc  RasterisedEvent.cc  WaveletCoefficient.cc  WaveletEvent.cc
