SUBDIRS = .

nobase_pkginclude_HEADERS = Exceptions.hh         \
                            GSLEngine.hh          \
                            NewWave.hh            \
                            PixelArray.hh         \
                            PixelDefinition.hh    \
                            RasterisedEvent.hh    \
                            Utils.hh              \
                            WaveletCoefficient.hh \
                            WaveletEngine.hh      \
                            WaveletEvent.hh       
