SUBDIRS = .

nobase_pkginclude_HEADERS = Exceptions.hh         \
                            MomentumHelpers.hh    \
                            NewWave.hh            \
                            PixelArray.hh         \
                            PixelDefinition.hh    \
                            RasterisedEvent.hh    \
                            Utils.hh              \
                            WaveletCoefficient.hh \
                            WaveletEngine.hh      \
                            WaveletEvent.hh     
                            
if ENABLE_GSL
nobase_pkginclude_HEADERS += GSLEngine.hh
endif

