SUBDIRS = .

nobase_pkginclude_HEADERS = Exceptions.hh         \
                            FrequencyBand.hh      \
                            MomentumHelpers.hh    \
                            NewWave.hh            \
                            PixelArray.hh         \
                            PixelDefinition.hh    \
                            Utils.hh              \
                            WaveletCoefficient.hh \
                            WaveletEngine.hh      \
                            WaveletEvent.hh     
                            
if ENABLE_GSL
nobase_pkginclude_HEADERS += GSLEngine.hh
endif

